Change skills default background

--- a/src/app/components/home/styles.scss
+++ b/src/app/components/home/styles.scss
@@ -421,7 +421,7 @@ $radius: 1rem;
             span {
               width: 1rem;
               height: 1rem;
-              background-color: $primary;
+              background-color: $white;
 
               border-radius: 50%;
 
